gitops/basic/grade-submission-api-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: grade-submission-api
  namespace: grade-demo
spec:
  type: ClusterIP
  selector:
    app: grade-submission
  ports:
  - port: 3000
    targetPort: 3000
