gitops/basic/grade-submission-api-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: grade-submission-api-ingress
  namespace: grade-demo
spec:
  ingressClassName: nginx
  rules:
     - http:
        paths:
          - path: "/"
            pathType: Prefix
            backend:
              service:
                name: grade-submission-api
                port:
                  number: 3000
